split quiz & question
