# api/src/routes/index.js
@@ -1,7 +1,12 @@
-const quizzes = require("./quizzes");
-const statuses = require("./statuses");
+
+//const statuses = require("./statuses");
+var express = require("express");
+var router = express.Router();
+require("./quizzes")(router);
+require("./questions")(router);
 
 module.exports = (app) => {
-  app.use("/statuses", statuses);
-  app.use("/", quizzes);
+  //app.use("/questions", questions);
+  //app.use("/statuses", statuses);
+  app.use("/", router);
 };
